--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,3 +22,5 @@ security:
     access_control:
         - { path: ^/api/auth, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/user, roles: ROLE_USER }
+        - { path: ^/api/project, roles: ROLE_USER }
+        - { path: ^/api/projects, roles: ROLE_USER }
