получение проекта, списка тестов и создание новых тестов

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,3 +24,4 @@ security:
         - { path: ^/api/user, roles: ROLE_USER }
         - { path: ^/api/project, roles: ROLE_USER }
         - { path: ^/api/projects, roles: ROLE_USER }
+        - { path: ^/api/test, roles: ROLE_USER }
