docker, sort tests

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ENV=dev
 APP_SECRET=9a1738f4932364bc2de09cf83db8a46a
 
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://dashboard:dashboard@127.0.0.1:3306/postgres?serverVersion=5.7
 
 # APP VARIABLES
 REDMINE_URL=https://redmine.example.ru
